bk_ida/gobmkida/c1/play_ascii
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/play_ascii/src/interface/play_ascii.c:1104:55: error: use of undeclared identifier 'dword_495C58'
sgftreeWriteResult( &sgftree, ( __m128)( unsigned int)dword_495C58[gameinfo->to_move == 1], v4, 1); 
                                                      ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/play_ascii/src/interface/play_ascii.c:1210:6: error: used type 'SGFTree' (aka 'struct SGFTree_t') where arithmetic or pointer type is required
v7 = ( SGFTree)LODWORD( v38); 
     ^         ~~~~~~~~~~~~~
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/play_ascii/src/interface/play_ascii.c:1412:40: error: operand of type 'SGFTree' (aka 'struct SGFTree_t') where arithmetic or pointer type is required
sgftreeWriteResult( &sgftree, ( __m128)v7, v4, 1); 
                                       ^~
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/play_ascii/src/interface/play_ascii.c:1467:54: error: too many arguments to function call, expected 3, have 4
sgftreeCreateHeaderNode( &sgftree, board_size, komi, v4); 
~~~~~~~~~~~~~~~~~~~~~~~                              ^~
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/play_ascii/src/include/sgftree.h:155:1: note: 'sgftreeCreateHeaderNode' declared here
void sgftreeCreateHeaderNode(SGFTree *tree, int boardsize, float komi);
^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/play_ascii/src/interface/play_ascii.c:1469:6: error: used type 'SGFTree' (aka 'struct SGFTree_t') where arithmetic or pointer type is required
v7 = ( SGFTree)LODWORD( komi); 
     ^         ~~~~~~~~~~~~~~
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/play_ascii/src/interface/play_ascii.c:1470:45: error: too many arguments to function call, expected 3, have 4
gameinfo_clear( gameinfo, board_size, komi, v4); 
~~~~~~~~~~~~~~                              ^~
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/play_ascii/src/include/gnugo.h:181:1: note: 'gameinfo_clear' declared here
void gameinfo_clear(Gameinfo *ginfo, int boardsize, float komi);
^
6 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/play_ascii/src/obj/2/play_ascii.o] Error 1
